# Losen

./: .gitignore
Losen/: ButtonsOfCondition.cpp  ButtonsOfGraphic.cpp  ByttonsOfAnswer.cpp  CMakeCache.txt  CMakeLists.txt  GraphicsView.cpp  GraphicsView.h  Losen.cpp  Losen.h  Losen.ui  qtcsettings.cmake
Losen/sFiles/: ButtonsOfCondition.cpp  main.cpp
